# factorial-zeros

./: .travis.yml  LICENSE  README.md  factorial-zeros.cabal
src/: Main.hs
