name:                factorial-zeros
version:             0.1.0.0
synopsis:            Plots of number of trailing zeros of n!
description:         Using haskell-chart to look at how many trailing zeros are in a given number
homepage:            github.com/factorial-zeros
license:             MIT
license-file:        LICENSE
author:              Stefan Eng
maintainer:          stefaneng13@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable factorial-zeros
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010